--- a/index.html
+++ b/index.html
@@ -1331,7 +1331,7 @@
             console.log('🤖 Ouverture du Trading Bot JERCAT...');
             
             // Ouvrir le bot dans une nouvelle fenêtre
-            const botWindow = window.open('jercat-bot-final-auto.html', 'JercatBot', 'width=1400,height=900');
+            const botWindow = window.open('https://bot-test-zeta-neon.vercel.app/', 'JercatBot', 'width=1400,height=900');
             
             // Établir la confiance quand la fenêtre est chargée
             if (botWindow) {
